MDEV-27469: Assertion failure in defragment due to tx_read_only

In commit c5fd9aa562fb15e8d6ededceccbec0c9792a3243 (MDEV-25919)
we prevented the function dict_stats_save_index_stat()
from being called in read-only mode in dict_stats_save(),
but not elsewhere.

dict_stats_save_defrag_summary(), dict_stats_save_defrag_stats():
If the transaction is in read-only mode, return DB_READ_ONLY
and do not attempt to lock or modify anything.